# buckhead-butcher-ical

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  buckhead_butcher_classes.ics  pyproject.toml
.claude/: settings.json  settings.local.json
bbical/: __main__.py
docs/: TERRAFORM_STATE_SETUP.md
infra/: .gitignore  README.md  backend.tf  lambda_handler.py  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/state-management/: .gitignore  README.md  main.tf  outputs.tf
tests/: test_scraper.py
