[project]
name = "buckhead-butcher-ical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "icalendar>=5.0.0",
    "pytz>=2024.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
